# weekly-review-skill

./: .gitignore  README.md  RELEASE.md  pyproject.toml  test-report.md
automations/: weekly-review-automation.json  workbuddy-automation.json
demo/: 2026-07-20周度复盘-Cursor-Demo.md  README.md  review-input-cursor-demo.json
docs/: bugs.md
examples/: notes-example.json
skills/weekly-review/: README.md  SKILL.md  analyzer.py  charts.py  cli.py  mcp_server.py  report.py  utils.py
skills/weekly-review/legacy/: README.md  analyzer.py
skills/weekly-review/schema/: README.md  review-input.example.json
skills/weekly-review/weekly_review/: analyzer.py  mcp_server.py  report.py
skills/workbuddy/: SKILL.md
src/weekly_review/: __init__.py  cli.py  utils.py
tests/: test_analyzer.py  test_cli.py  test_report.py
