[project]
name = "weekly-review-skill"
version = "1.2.2"
description = "Agent-fed weekly review：宿主 Agent 采集事实，Skill 固化复盘结构与 Markdown 渲染。"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "EDY" }
]
keywords = ["weekly-review", "weekly-retro", "mcp", "agent-skill", "productivity", "retrospective"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
