[project]
name = "weekly-review-skill"
version = "1.2.3"
description = "面向任意 AI Agent 的自动复盘：用量看板、提示词改进、高低效归因、可视化图表、会话清理、定时周报。"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "EDY" }
]
keywords = [
    "weekly-review",
    "prompt",
    "ai-usage",
    "dashboard",
    "charts",
    "token",
    "automation",
    "mcp",
    "agent-skill",
    "cursor",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
